--- a/docker-compose.mainnet.yml
+++ b/docker-compose.mainnet.yml
@@ -43,7 +43,9 @@ services:
       "--pprof",
       "--pprof.addr=0.0.0.0",
       "--metrics",
+      "--metrics.addr=0.0.0.0",
       "--metrics.expensive",
+      "--metrics.builder",
       "--authrpc.addr=0.0.0.0",
       "--authrpc.port=8551",
       "--authrpc.jwtsecret=/secrets/jwtsecret",
