--- a/docker-compose.mainnet.yml
+++ b/docker-compose.mainnet.yml
@@ -5,7 +5,7 @@ x-logging: &logging
     options:
       max-size: 100m
       max-file: "3"
-      tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
+      tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
 
 services:
   execution:
@@ -19,42 +19,43 @@ services:
       - "8545:8545"
       - "8546:8546"
       - "30303:30303"
-    command: [
-      "--builder=true",
-      "--builder.remote_relay_endpoint=https://0xac6e77dfe25ecd6110b8e780608cce0dab71fdd5ebea22a16c0205200f2f8e2e3ad3b71d3499c54ad14d6c21b41a37ae@boost-relay.flashbots.net",
-      "--builder.beacon_endpoint=http://consensus:4000/",
-      "--builder.bellatrix_fork_version=0x02000000",
-      "--builder.genesis_fork_version=0x00000000",
-      "--builder.genesis_validators_root=0x0000000000000000000000000000000000000000000000000000000000000000",
-      "--builder.secret_key=${BUILDER_TX_SIGNING_KEY}",
-      "--datadir=/data",
-      "--syncmode=snap",
-      "--port=30303",
-      "--http",
-      "--http.vhosts=*",
-      "--http.corsdomain=*",
-      "--http.addr=0.0.0.0",
-      "--http.port=8545",
-      "--http.api=admin,debug,web3,eth,txpool,personal,miner,net,builder,engine",
-      "--ws",
-      "--ws.api=web3,eth,txpool,net",
-      "--ws.addr=0.0.0.0",
-      "--ws.port=8546",
-      "--pprof",
-      "--pprof.addr=0.0.0.0",
-      "--metrics",
-      "--metrics.addr=0.0.0.0",
-      "--metrics.expensive",
-      "--metrics.builder",
-      "--authrpc.addr=0.0.0.0",
-      "--authrpc.port=8551",
-      "--authrpc.jwtsecret=/secrets/jwtsecret",
-      "--authrpc.vhosts=*",
-      "--verbosity=3",
-      "--miner.algotype=greedy",
-      "--miner.extradata=${BUILDER_EXTRA_DATA}",
-      "--miner.etherbase=${BUILDER_ADDRESS}",
-    ]
+    command:
+      [
+        "--builder=true",
+        "--builder.remote_relay_endpoint=https://0xac6e77dfe25ecd6110b8e780608cce0dab71fdd5ebea22a16c0205200f2f8e2e3ad3b71d3499c54ad14d6c21b41a37ae@boost-relay.flashbots.net",
+        "--builder.beacon_endpoint=http://consensus:4000/",
+        "--builder.bellatrix_fork_version=0x02000000",
+        "--builder.genesis_fork_version=0x00000000",
+        "--builder.genesis_validators_root=0x0000000000000000000000000000000000000000000000000000000000000000",
+        "--builder.secret_key=${BUILDER_TX_SIGNING_KEY}",
+        "--datadir=/data",
+        "--syncmode=snap",
+        "--port=30303",
+        "--http",
+        "--http.vhosts=*",
+        "--http.corsdomain=*",
+        "--http.addr=0.0.0.0",
+        "--http.port=8545",
+        "--http.api=admin,debug,web3,eth,txpool,personal,miner,net,builder,engine",
+        "--ws",
+        "--ws.api=web3,eth,txpool,net",
+        "--ws.addr=0.0.0.0",
+        "--ws.port=8546",
+        "--pprof",
+        "--pprof.addr=0.0.0.0",
+        "--metrics",
+        "--metrics.addr=0.0.0.0",
+        "--metrics.expensive",
+        "--metrics.builder",
+        "--authrpc.addr=0.0.0.0",
+        "--authrpc.port=8551",
+        "--authrpc.jwtsecret=/secrets/jwtsecret",
+        "--authrpc.vhosts=*",
+        "--verbosity=3",
+        "--miner.algotype=greedy",
+        "--miner.extradata=${BUILDER_EXTRA_DATA}",
+        "--miner.etherbase=${BUILDER_ADDRESS}",
+      ]
     <<: *logging
 
   consensus:
@@ -66,22 +67,23 @@ services:
       - "5052:5052"
       - "9000:9000"
       - "13000:13000"
-    command: [
-      "--accept-terms-of-use",
-      "--execution-endpoint=http://execution:8551",
-      "--jwt-secret=/secrets/jwtsecret",
-      "--suggested-fee-recipient=${BUILDER_ADDRESS}",
-      "--datadir=/data",
-      "--checkpoint-sync-url=${BEACON_API_URL}",
-      "--genesis-beacon-api-url=${BEACON_API_URL}",
-      "--rpc-host=0.0.0.0",
-      "--grpc-gateway-host=0.0.0.0",
-      "--grpc-gateway-port=5052",
-      "--monitoring-host=0.0.0.0",
-      "--monitoring-port=8008",
-      "--p2p-tcp-port=9000",
-      "--p2p-udp-port=9000",
-    ]
+    command:
+      [
+        "--accept-terms-of-use",
+        "--execution-endpoint=http://execution:8551",
+        "--jwt-secret=/secrets/jwtsecret",
+        "--suggested-fee-recipient=${BUILDER_ADDRESS}",
+        "--datadir=/data",
+        "--checkpoint-sync-url=${BEACON_API_URL}",
+        "--genesis-beacon-api-url=${BEACON_API_URL}",
+        "--rpc-host=0.0.0.0",
+        "--grpc-gateway-host=0.0.0.0",
+        "--grpc-gateway-port=5052",
+        "--monitoring-host=0.0.0.0",
+        "--monitoring-port=8008",
+        "--p2p-tcp-port=9000",
+        "--p2p-udp-port=9000",
+      ]
     <<: *logging
 
   prometheus:
@@ -91,12 +93,13 @@ services:
       - prom-data:/prometheus
       - /etc/localtime:/etc/localtime:ro
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-    command: [
-      "--config.file=/etc/prometheus/prometheus.yml",
-      "--storage.tsdb.path=/prometheus", 
-      "--web.console.libraries=/usr/share/prometheus/console_libraries", 
-      "--web.console.templates=/usr/share/prometheus/consoles"
-    ]
+    command:
+      [
+        "--config.file=/etc/prometheus/prometheus.yml",
+        "--storage.tsdb.path=/prometheus",
+        "--web.console.libraries=/usr/share/prometheus/console_libraries",
+        "--web.console.templates=/usr/share/prometheus/consoles",
+      ]
     <<: *logging
     depends_on:
       - node-exporter
@@ -108,10 +111,11 @@ services:
 
   ethereum-metrics-exporter:
     image: samcm/ethereum-metrics-exporter
-    command: [
-      "--consensus-url=http://consensus:5052",
-      "--execution-url=http://execution:8545",
-    ]
+    command:
+      [
+        "--consensus-url=http://consensus:5052",
+        "--execution-url=http://execution:8545",
+      ]
     restart: unless-stopped
     <<: *logging
     depends_on:
@@ -120,17 +124,18 @@ services:
 
   node-exporter:
     image: quay.io/prometheus/node-exporter:latest
-    command: [
-      "--path.rootfs=/host",
-      "--path.procfs=/host/proc",
-      "--path.sysfs=/host/sys",
-      "--collector.filesystem.ignored-mount-points='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'",
-      "--no-collector.ipvs",
-    ]
+    command:
+      [
+        "--path.rootfs=/host",
+        "--path.procfs=/host/proc",
+        "--path.sysfs=/host/sys",
+        "--collector.filesystem.ignored-mount-points='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'",
+        "--no-collector.ipvs",
+      ]
     pid: host
     restart: unless-stopped
     volumes:
-      - '/:/host:ro,rslave'
+      - "/:/host:ro,rslave"
       - /etc/hostname:/etc/nodename:ro
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -207,7 +212,7 @@ services:
       - promtail-data:/tmp
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
     command:
-      - '--config.file=/etc/promtail/promtail.yml'
+      - "--config.file=/etc/promtail/promtail.yml"
     restart: unless-stopped
     depends_on:
       - loki
@@ -221,7 +226,7 @@ services:
       - loki-data:/tmp
       - ./loki:/etc/loki
     command:
-      - '--config.file=/etc/loki/loki.yml'
+      - "--config.file=/etc/loki/loki.yml"
     restart: unless-stopped
     <<: *logging
     depends_on:
